src/component/usage_display/snapshots/envision__component__usage_display__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/usage_display/tests.rs
expression: terminal.backend().to_string()
---
CPU: 45%                      
Mem: 60%
