src/component/usage_display/snapshots/envision__component__usage_display__tests__view_grid_2_columns.snap
---
source: src/component/usage_display/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│CPU: 45%                Memory: 3.2 GB          │
│Disk: 120 GB            Network: 1.5 Mbps       │
└────────────────────────────────────────────────┘
