src/component/usage_display/snapshots/envision__component__usage_display__tests__view_grid_3_columns.snap
---
source: src/component/usage_display/tests.rs
expression: terminal.backend().to_string()
---
┌ Metrics ───────────────────────────────────────┐
│CPU: 45%        Mem: 3.2 GB     Disk: 120 GB    │
└────────────────────────────────────────────────┘
