src/component/usage_display/snapshots/envision__component__usage_display__tests__view_horizontal_single.snap
---
source: src/component/usage_display/tests.rs
expression: terminal.backend().to_string()
---
CPU: 45%
