src/component/usage_display/snapshots/envision__component__usage_display__tests__view_vertical_with_title.snap
---
source: src/component/usage_display/tests.rs
expression: terminal.backend().to_string()
---
┌ System ────────────────────┐
│CPU: 45%                    │
│Memory: 3.2 GB              │
└────────────────────────────┘
